changed: name to IPA furigana

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
   "manifestExtName": {
-    "message": "Furigana Injector++"
+    "message": "IPA furigana"
   },
   "manifestExtDescription": {
     "message": "Looks up the readings for kanji words and inserts them as furigana"
