--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
   "manifestExtName": {
-    "message": "IPA furigana"
+    "message": "Furiganaize"
   },
   "manifestExtDescription": {
     "message": "Looks up the readings for kanji words and inserts them as furigana"
